welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: not found: value k
k = 0
^Program:4: error: not found: value k
 	while (k != nbPas) {
               ^