welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
 def move(nbPas: Int,versLAvant: Boolean) {
k = 0
 	while (k != nbPas) {
 		avance()
 	}
 }

 